Support 7z and its password extraction

--- a/data/arq.qrc
+++ b/data/arq.qrc
@@ -10,5 +10,7 @@
     <file>icons/document-new.svg</file>
     <file>icons/document-open.svg</file>
     <file>icons/edit-select-all.svg</file>
+    <file>icons/locked.svg</file>
+    <file>icons/unlocked.svg</file>
   </qresource>
 </RCC>
