Translation support and cleanup

--- a/data/arq.qrc
+++ b/data/arq.qrc
@@ -5,11 +5,14 @@
     <file>icons/archive-insert-directory.svg</file>
     <file>icons/archive-insert.svg</file>
     <file>icons/archive-remove.svg</file>
+    <file>icons/collapse.svg</file>
     <file>icons/dialog-error.svg</file>
     <file>icons/dialog-ok.svg</file>
     <file>icons/document-new.svg</file>
     <file>icons/document-open.svg</file>
     <file>icons/edit-select-all.svg</file>
+    <file>icons/expand.svg</file>
+    <file>icons/help-about.svg</file>
     <file>icons/locked.svg</file>
     <file>icons/unlocked.svg</file>
   </qresource>
