Lock emblem for encrypted items

--- a/data/arq.qrc
+++ b/data/arq.qrc
@@ -11,6 +11,7 @@
     <file>icons/document-new.svg</file>
     <file>icons/document-open.svg</file>
     <file>icons/edit-select-all.svg</file>
+    <file>icons/emblem-lock.svg</file>
     <file>icons/expand.svg</file>
     <file>icons/help-about.svg</file>
     <file>icons/locked.svg</file>
