Context menu item for copying current path
Also show the path on the status bar.

--- a/data/arq.qrc
+++ b/data/arq.qrc
@@ -10,6 +10,7 @@
     <file>icons/dialog-ok.svg</file>
     <file>icons/document-new.svg</file>
     <file>icons/document-open.svg</file>
+    <file>icons/edit-copy.svg</file>
     <file>icons/edit-select-all.svg</file>
     <file>icons/emblem-lock.svg</file>
     <file>icons/emblem-symbolic-link.svg</file>
