Added (icon size) Preferences

--- a/data/arq.qrc
+++ b/data/arq.qrc
@@ -17,6 +17,7 @@
     <file>icons/expand.svg</file>
     <file>icons/help-about.svg</file>
     <file>icons/locked.svg</file>
+    <file>icons/preferences-system.svg</file>
     <file>icons/unlocked.svg</file>
   </qresource>
 </RCC>
