--- a/pref.ui
+++ b/pref.ui
@@ -32,18 +32,23 @@
    <property name="spacing">
     <number>5</number>
    </property>
-   <item row="3" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+   <item row="0" column="0" colspan="5">
+    <widget class="QCheckBox" name="winSizeBox">
+     <property name="text">
+      <string>Remember window &amp;size on closing</string>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>5</width>
-       <height>5</height>
-      </size>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="startSizeLabel">
+     <property name="text">
+      <string>Start with this size:</string>
      </property>
-    </spacer>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QSpinBox" name="spinX">
+    </widget>
    </item>
    <item row="1" column="2">
     <widget class="QLabel" name="label">
@@ -54,24 +59,6 @@
    </item>
    <item row="1" column="3">
     <widget class="QSpinBox" name="spinY">
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="startSizeLabel">
-     <property name="text">
-      <string>Start with this size:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="4">
-    <widget class="QCheckBox" name="winSizeBox">
-     <property name="text">
-      <string>Remember window &amp;size on closing</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QSpinBox" name="spinX">
     </widget>
    </item>
    <item row="1" column="4">
@@ -87,16 +74,6 @@
      </property>
     </spacer>
    </item>
-   <item row="4" column="0" colspan="5">
-    <widget class="QLabel" name="promptLabel"/>
-   </item>
-   <item row="5" column="0" colspan="5">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Close</set>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="0">
     <widget class="QLabel" name="iconSizeLabel">
      <property name="text">
@@ -106,6 +83,36 @@
    </item>
    <item row="2" column="1" colspan="3">
     <widget class="QComboBox" name="iconSizeCombo">
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="5">
+    <widget class="QCheckBox" name="promptBox">
+     <property name="text">
+      <string>Show prompt on removing items</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>5</width>
+       <height>5</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="5" column="0" colspan="5">
+    <widget class="QLabel" name="promptLabel"/>
+   </item>
+   <item row="6" column="0" colspan="5">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Close</set>
+     </property>
     </widget>
    </item>
   </layout>
