Added option to stretch first column
Also added app icon.

--- a/data/arq.qrc
+++ b/data/arq.qrc
@@ -5,6 +5,7 @@
     <file>icons/archive-insert-directory.svg</file>
     <file>icons/archive-insert.svg</file>
     <file>icons/archive-remove.svg</file>
+    <file>icons/arqiver.svg</file>
     <file>icons/collapse.svg</file>
     <file>icons/dialog-error.svg</file>
     <file>icons/dialog-ok.svg</file>
