--- a/pref.ui
+++ b/pref.ui
@@ -95,7 +95,14 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="4" column="0" colspan="5">
+    <widget class="QCheckBox" name="stretchBox">
+     <property name="text">
+      <string>Fit first column into available width</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
     <widget class="QLabel" name="tarLabel">
      <property name="toolTip">
       <string>Leave empty for the default.
@@ -108,7 +115,7 @@ binary does not belong to libarchive.</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1" colspan="3">
+   <item row="5" column="1" colspan="3">
     <widget class="QLineEdit" name="tarLineEdit">
      <property name="toolTip">
       <string>Leave empty for the default.
@@ -121,14 +128,14 @@ binary does not belong to libarchive.</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="4">
+   <item row="5" column="4">
     <widget class="QToolButton" name="tarButton">
      <property name="text">
       <string notr="true">...</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
+   <item row="6" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -141,10 +148,10 @@ binary does not belong to libarchive.</string>
      </property>
     </spacer>
    </item>
-   <item row="6" column="0" colspan="5">
+   <item row="7" column="0" colspan="5">
     <widget class="QLabel" name="promptLabel"/>
    </item>
-   <item row="7" column="0" colspan="5">
+   <item row="8" column="0" colspan="5">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Close</set>
