--- a/pref.ui
+++ b/pref.ui
@@ -102,7 +102,17 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
+   <item row="5" column="0" colspan="5">
+    <widget class="QCheckBox" name="expandAllBox">
+     <property name="toolTip">
+      <string>If this is unchecked, only the top level directories will be expanded.</string>
+     </property>
+     <property name="text">
+      <string>Expand all directories when opening archives</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0">
     <widget class="QLabel" name="tarLabel">
      <property name="toolTip">
       <string>Leave empty for the default.
@@ -115,7 +125,7 @@ binary does not belong to libarchive.</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1" colspan="3">
+   <item row="6" column="1" colspan="3">
     <widget class="QLineEdit" name="tarLineEdit">
      <property name="toolTip">
       <string>Leave empty for the default.
@@ -128,14 +138,14 @@ binary does not belong to libarchive.</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="4">
+   <item row="6" column="4">
     <widget class="QToolButton" name="tarButton">
      <property name="text">
       <string notr="true">...</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
+   <item row="7" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -148,10 +158,10 @@ binary does not belong to libarchive.</string>
      </property>
     </spacer>
    </item>
-   <item row="7" column="0" colspan="5">
+   <item row="8" column="0" colspan="5">
     <widget class="QLabel" name="promptLabel"/>
    </item>
-   <item row="8" column="0" colspan="5">
+   <item row="9" column="0" colspan="5">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Close</set>
