Added ability to modify files inside archives

--- a/data/arq.qrc
+++ b/data/arq.qrc
@@ -20,6 +20,7 @@
     <file>icons/locked.svg</file>
     <file>icons/preferences-system.svg</file>
     <file>icons/process-stop.svg</file>
+    <file>icons/update.svg</file>
     <file>icons/view.svg</file>
     <file>icons/unknown.svg</file>
     <file>icons/unlocked.svg</file>
